Baked Particles could not be rendering as expected #57105

Closed
opened 2018-10-08 19:40:48 +02:00 by tokenyet · 5 comments

System Information
Win10 GTX960

Blender Version
Broken: blender 2.80 alpha2 d022794cad (also more early b30d103cf6)
Worked: blender 2.79

Short description of error
Issue 1. Bake is not working for Particle system.
Issue 2. IForce Field is not affected particles on rendering time but work in viewport.

Exact steps for others to reproduce the error

  1. Open new project.

  2. Make a new cube.

  3. Make the default cube as new particle system.

  4. Baked and Move to the working frame and Click F11, F12, and no particle showed.

  5. If click Free Baked, and F11, F12. Then, It should appear, but If add any force field, It could not be affected and only show defualt behavior on rendering result.

Blend file For Issue 1.
particleBakeIssue.blend

Blend file For Issue 2. (Just a little different with Issue 1)
particleForceFieldIssue.blend

**System Information** Win10 GTX960 **Blender Version** Broken: blender 2.80 alpha2 d022794cad9 (also more early b30d103cf63) Worked: blender 2.79 **Short description of error** Issue 1. Bake is not working for Particle system. Issue 2. IForce Field is not affected particles on rendering time but work in viewport. **Exact steps for others to reproduce the error** 1. Open new project. 2. Make a new cube. 3. Make the default cube as new particle system. 4. Baked and Move to the working frame and Click F11, F12, and no particle showed. 5. If click **Free Baked**, and F11, F12. Then, It should appear, but If add any force field, It could not be affected and only show defualt behavior on rendering result. Blend file For Issue 1. [particleBakeIssue.blend](https://archive.blender.org/developer/F4990169/particleBakeIssue.blend) Blend file For Issue 2. (Just a little different with Issue 1) [particleForceFieldIssue.blend](https://archive.blender.org/developer/F4990183/particleForceFieldIssue.blend)
Author

Added subscriber: @tokenyete

Added subscriber: @tokenyete
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This depends on #56352 being adressed

This depends on #56352 being adressed

This issue was referenced by 34058c4ff1

This issue was referenced by 34058c4ff1684b4d2e4d8619e2a7b690d9286140

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57105
No description provided.