source/blender/makesdna/DNA_particle_types.h
@@ -567,6 +567,7 @@ typedef enum eParticleShapeFlag {
 //#define PSYS_PROTECT_CACHE	4096 /* deprecated */
 #define PSYS_DISABLED			8192
 #define PSYS_OB_ANIM_RESTORE	16384 /* runtime flag */
+#define PSYS_SHARED_CACHES		32768
 
 /* pars->flag */
 #define PARS_UNEXIST		1
